--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -23,6 +23,10 @@
     <%= f.label :last_name %><br />
     <%= f.text_field :last_name %>
   </div>
+  <div class="field">
+    <%= f.label :terms_of_service %><br />
+    <%= f.check_box :terms_of_service %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
