--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,15 +1,7 @@
 <%= form_for(@user) do |f| %>
-  <% if @user.errors.any? %>
-  <div id="errorExplanation">
-    <h2><%= pluralize(@user.errors.count, "error") %> prohibited
-        this user from being saved:</h2>
-    <ul>
-    <% @user.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-    </ul>
-  </div>
-  <% end %>
+  <%= f.error_messages :header_message => "Invalid User!",
+  :message => "You'll need to fix the following fields:",
+  :header_tag => :h3 %>
  
   <div class="field">
     <%= f.label :email %><br />
