Playing with layouts and partials

--- a/app/views/routines/index.html.erb
+++ b/app/views/routines/index.html.erb
@@ -1,3 +1,9 @@
+<%= stylesheet_link_tag "main" %>
+
+<% content_for :title do %>
+  Routines
+<% end %>
+
 <h1>Listing Routines</h1>
  
 <table>
@@ -22,4 +28,6 @@
  
 <br />
  
+<%= image_tag "twitter.png", { :height => 45, :width => 45 } %>
+
 <%= link_to 'New routine', new_routine_path %>
