--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,17 @@
 <head>
   <title>WonTif - <%= yield :title %></title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
+  <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<div id="menu">
+ Menu: <%= link_to "My Blog", posts_path %> | <%= link_to "Users", users_path %>
+</div>
 <%= yield %>
-
+<div id="footer">
+	Copyright WonTif | Follow us <%= image_tag "twitter.png", { :height => 45, :width => 45 } %>
+</div>
 </body>
 </html>
