--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,5 +15,8 @@
 <div id="footer">
 	Copyright WonTif | Follow us <%= image_tag "twitter.png", { :height => 45, :width => 45 } %>
 </div>
+
+<%=debug(params) if Rails.env.development? %>
+
 </body>
 </html>
