--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>WonTif - <%= yield :title %></title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-<div id="menu">
- Menu: <%= link_to "My Blog", posts_path %> | <%= link_to "Users", users_path %>
-</div>
-<%= yield %>
-<div id="footer">
-	Copyright WonTif | Follow us <%= image_tag "twitter.png", { :height => 45, :width => 45 } %>
-</div>
-
-<%=debug(params) if Rails.env.development? %>
-
-</body>
+  <head>
+    <title><%= full_title(yield(:title)) %></title>
+    <%= stylesheet_link_tag    "application", media: "all" %>
+    <%= javascript_include_tag "application" %>
+    <%= csrf_meta_tags %>
+    <%= render 'layouts/shim' %>    
+  </head>
+  <body>
+    <%= render 'layouts/header' %>
+    <div class="container">
+      <%= yield %>
+      <%= render 'layouts/footer' %>
+    </div>
+	<div class="container">
+		<%=debug(params) if Rails.env.development? %>
+	</div>
+  </body>
 </html>
