--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,6 +6,7 @@
         <ul class="nav pull-right">
           <li><%= link_to "Home",    '#' %></li>
           <li><%= link_to "Help",    '#' %></li>
+            <li><%= link_to "User List", users_path %></li>
           <li><%= link_to "Sign in", '#' %></li>
         </ul>
       </nav>
